# dg_kit

./: .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml  publish.yml
scripts/: ci.sh
src/dg_kit/: __init__.py  cli.py
src/dg_kit/base/: __init__.py  business_information.py  convention.py  data_catalog.py  enums.py  logical_model.py  physical_model.py
src/dg_kit/base/dataclasses/: __init__.py  business_information.py  convention.py  data_catalog.py  logical_model.py  physical_model.py
src/dg_kit/commands/: __init__.py  pull.py  sync.py  test.py
src/dg_kit/commands/data_catalog/: __init__.py
src/dg_kit/flows/: test_lm_and_pm_consistency.py
src/dg_kit/integrations/: __init__.py
src/dg_kit/integrations/dbt/: README.md  __init__.py  parser.py
src/dg_kit/integrations/notion/: README.md  __init__.py  api.py  formater.py  parser.py
src/dg_kit/integrations/odm/: README.md  __init__.py  attr_types.py  parser.py
src/dg_kit/utils/artifact/: __init__.py  local.py  s3.py
