[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[project]
name = "dg_kit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Chelidze Georgii", email = "chelidze.georgii.d@gmail.com" }]

[project.optional-dependencies]
notion = [
    "notion-client>=2.7.0",
]
dbt = [
    "pyyaml>=6.0.3",
]

[dependency-groups]
test = [
    "pytest>=9.0.2",
]
